<resources>
    <string name="app_name">BarterApp</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_make_offer">Make Offer</string>
    <string name="action_register">Register</string>
    <string name="action_offer_accept">Accept</string>
    <string name="action_offer_refuse">Refuse</string>
    <string name="action_barter">Barter</string>
    <string name="action_delete">Delete</string>
    <string name="action_continue">Apply</string>
    <string name="action_add">Add</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">Products</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_email">anonymous@user.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="menu_account">My Account</string>
    <string name="menu_add">Add Product</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contact</string>
    <string name="filter_all">All</string>
    <string name="filter_gadgets">Gadgets</string>
    <string name="filter_clothes">Clothes</string>
    <string name="filter_tools">Tools</string>
    <string name="filter_bikes">Bikes</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_alias">Alias</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_tel">Telephone Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_retype">Retype Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="view_user_s_other_products">View user\'s products</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_email_info">Please enter your email address and press the button in order to change your password. If successful go into your email account and follow the link to verify email address.</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="tab_text_profile">Profile</string>
    <string name="tab_text_products">Products</string>
    <string name="tab_text_offers">Offers</string>
    <string name="tab_text_review">Reviews</string>
    <string name="product_info_tag">PRODUCT_INFORMATION</string>
    <string name="view_offer_info_tag">VIEW_OFFER_INFORMATION</string>
    <string name="view_review_info_tag">VIEW_REVIEW_INFORMATION</string>
    <string name="view_reviews_info_tag">VIEW_REVIEWS_INFORMATION</string>
    <string name="view_products_info_tag">VIEW_PRODUCTS_INFORMATION</string>
    <string name="view_image_info_tag">VIEW_IMAGE</string>
    <string name="view_video_info_tag">VIEW_VIDEO</string>
    <string name="offer_user_id_tag">OFFER_USER_ID</string>
    <string name="offer_product_id_tag">OFFER_PRODUCT_ID</string>
    <string name="offer_product_img__uri_tag">OFFER_PRODUCT_IMG_URI</string>
    <string name="category_prompt">Choose a category</string>
    <string name="cat_gadgets">Gadgets</string>
    <string name="cat_clothes">Clothes</string>
    <string name="cat_tools">Tools</string>
    <string name="cat_bikes">Bicycles</string>
    <string name="cat_other">Other</string>
    <string name="user_restricted_access">Restricted Access!</string>
    <string name="barter_same_user">Can\'t barter with yourself!</string>
    <string name="not_available">Not Available!</string>
    <string name="empty_email">Empty email.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="empty_pass">Empty password.</string>
    <string name="short_pass">The password must have at least 6 characters.</string>
    <string name="empty_firstN">First Name Empty!</string>
    <string name="empty_surname">Surname Empty!</string>
    <string name="empty_tel">Telephone No Empty!</string>
    <string name="empty_alias">Alias Empty!</string>
    <string name="empty_pass1">First Pass Empty!</string>
    <string name="empty_pass2">Retyped Pass Empty!</string>
    <string name="diff_pass">Different Passwords!</string>
    <string name="check_agree">Please check the Agree terms and conditions!</string>
    <string name="sign_in">Please Sign in.</string>
    <string name="signed_out">Signed out.</string>
    <string name="type_img">image/*</string>
    <string name="type_vid">video/*</string>
    <string name="empty_title">Empty title.</string>
    <string name="empty_desc">Empty description.</string>
    <string name="select_img">Please select a image for your product.</string>
    <string-array name="category_arrays">
        <item>@string/cat_gadgets</item>
        <item>@string/cat_clothes</item>
        <item>@string/cat_tools</item>
        <item>@string/cat_bikes</item>
        <item>@string/cat_other</item>
    </string-array>
</resources>
